<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/text1" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.gesture.GestureOverlayView
        android:layout_width="match_parent"
        android:background="#8666"
        android:gestureStrokeType="multiple"
        android:gestureStrokeWidth="10.0"

        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/gestureOverlayView"></android.gesture.GestureOverlayView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/AddGesture"
            android:onClick="addGesture"
            android:id="@+id/button" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/ListGesture"
            android:onClick="listGesture"
            android:id="@+id/button2" />
    </LinearLayout>

</LinearLayout>
